[package]
name = "core-utils"
version = "0.1.0"
edition = "2018"

[dependencies]
filetime = { git = "https://gitlab.redox-os.org/redox-os/filetime.git", branch = "redox" }

[[bin]]
name = "time"
path = "src/bin/time.rs"

[[bin]]
name = "touch"
path = "src/bin/touch.rs"

[[bin]]
name = "which"
path = "src/bin/which.rs"

